# read-box

./: .gitignore  README.md  README.zh-CN.md
code/: package.json
code/backend/: .env.example  pyproject.toml
code/backend/app/: database.py  main.py
code/backend/app/agents/: __init__.py  base.py  digest_agent.py  prompts.py  qa_agent.py  quiz_agent.py
code/backend/app/context/: __init__.py  manager.py
code/backend/app/llm/: __init__.py  base.py  openai_provider.py
code/backend/app/parsers/: __init__.py  base.py  epub_parser.py  pdf_parser.py  txt_parser.py
code/backend/app/routers/: books.py  config.py  dashboard.py  digest.py  highlights.py  qa.py  quiz.py  reading.py  settings.py
code/backend/tests/: __init__.py  test_context_manager.py  test_epub_parser.py  test_llm_provider.py  test_pdf_parser.py  test_txt_parser.py
code/frontend/: .npmrc  index.html  package.json  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
code/frontend/src/: App.vue  env.d.ts  main.ts
code/frontend/src/api/: books.ts  client.ts  dashboard.ts  digest.ts  highlights.ts  qa.ts  quiz.ts  reading.ts  settings.ts
code/frontend/src/router/: index.ts
code/frontend/src/stores/: app.ts
code/frontend/src/views/: BookDetail.vue  BookDigest.vue  BookList.vue  ChatView.vue  Home.vue  QuizView.vue  SettingsView.vue
code/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
code/src-tauri/capabilities/: default.json
code/src-tauri/src/: lib.rs  main.rs
skills/read-box/: SKILL.md
skills/read-box/evals/: evals.json
skills/read-box/scripts/: parse_epub.py  parse_pdf.py
